adjusted papers URLs

--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -143,7 +143,7 @@
   title={An Analysis of Capsule Networks for Part of Speech Tagging in High- and Low-resource Scenarios},
   author={Zupon, Andrew and Rafique, Faiz and Surdeanu, Mihai},
   booktitle={Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing (EMNLP), Workshop on Insights from Negative Results in NLP},
-  url={http://clulab.cs.arizona.edu/papers/insights2020-capsnet.pdf},
+  url={http://clulab.org/papers/insights2020-capsnet.pdf},
   year={2020}
 }
 
@@ -151,7 +151,7 @@
   title={Do Transformers Dream of Inference, or Can Pretrained Generative Models Learn Implicit Inferential Rules?},
   author={Liang, Zhengzhong and Surdeanu, Mihai},
   booktitle={Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing (EMNLP), Workshop on Insights from Negative Results in NLP},
-  url={http://clulab.cs.arizona.edu/papers/emnlp2020-can.pdf},
+  url={http://clulab.org/papers/emnlp2020-can.pdf},
   year={2020}
 }
 
@@ -369,7 +369,7 @@
 	author = {Jansen, Peter and Surdeanu, Mihai and Clark, Peter},
 	booktitle = {Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics (ACL)}, 
 	title = {Discourse Complements Lexical Semantics for Non-factoid Answer Reranking}, 
-  url = {http://clulab.cs.arizona.edu/papers/acl2014.pdf},
+  url = {http://clulab.org/papers/acl2014.pdf},
   url_Code_And_Data = {http://nlp.sista.arizona.edu/releases/acl2014/},
   url_Slides = {http://nlp.sista.arizona.edu/releases/acl2014/},
 }
@@ -378,7 +378,7 @@
 	author = {Manning, Christopher D. and Surdeanu, Mihai and Bauer, John and Finkel, Jenny and Bethard, Steven J. and McClosky, David},
 	booktitle = {Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics (ACL)}, 
 	title = {The Stanford CoreNLP Natural Language Processing Toolkit}, 
-  url = {http://clulab.cs.arizona.edu/papers/acl2014-corenlp.pdf},
+  url = {http://clulab.org/papers/acl2014-corenlp.pdf},
   url_Code = {http://nlp.stanford.edu/software/corenlp.shtml},
 }
 @InProceedings{Valenzuela:15,
@@ -386,7 +386,7 @@
   title     = {A Domain-independent Rule-based Framework for Event Extraction},
   booktitle = {Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing of the Assian Federation of Natural Language Processing: Software Demonstrations (ACL-IJCNLP)},
   year      = {2015},
-  url      = {http://clulab.cs.arizona.edu/papers/acl2015.pdf},
+  url      = {http://clulab.org/papers/acl2015.pdf},
   url_Code  = {https://github.com/sistanlp/processors},
 }
 @inproceedings{Fried:14,
@@ -394,7 +394,7 @@
 	author = {Fried, Daniel and Surdeanu, Mihai and Kobourov, Stephen and Hingle, Melanie and Bell, Dane},
 	booktitle = {Proceedings of the 2014 IEEE International Conference on Big Data}, 
 	title = {Analyzing the Language of Food on Social Media}, 
-  url = {http://clulab.cs.arizona.edu/papers/bigdata2014.pdf},
+  url = {http://clulab.org/papers/bigdata2014.pdf},
   url_Supplmental_Material = {http://arxiv.org/abs/1409.2195},
   url_Demo = {https://sites.google.com/site/twitter4food/},
 }
@@ -437,55 +437,55 @@
 	booktitle = {Proceedings of the Conference on Empirical Methods in Natural Language Processing (EMNLP)},
 	title = {Creating Causal Embeddings for Question Answering with Minimal Supervision},
   url = {http://arxiv.org/abs/1609.08097},
-  url_Data_and_Code = {http://clulab.cs.arizona.edu/data/emnlp2016-causal/},
+  url_Data_and_Code = {http://clulab.org/data/emnlp2016-causal/},
 }
 @inproceedings{surdeanu2013-icail,
 	year = {2013}, 
 	author = {Mihai Surdeanu and Sara Jeruss},
 	booktitle = {Proceedings of the XIV International Conference on Artificial Intelligence and Law (ICAIL)}, 
 	title = {Identifying Patent Monetization Entities}, 
-  url = {http://clulab.cs.arizona.edu/papers/icail2013.pdf},
+  url = {http://clulab.org/papers/icail2013.pdf},
 }
 @inproceedings{Surdeanu:13,
 	year = {2013}, 
 	author = {Surdeanu, Mihai},
 	booktitle = {Proceedings of the TAC-KBP 2013 Workshop}, 
 	title = {Overview of the TAC2013 Knowledge Base Population Evaluation: English Slot Filling and Temporal Slot Filling}, 
-  url = {http://clulab.cs.arizona.edu/papers/kbp2013.pdf},
-  url_Slides_SF = {http://clulab.cs.arizona.edu/papers/kbp2013_sf.pdf},
-  url_Slides_TSF = {http://clulab.cs.arizona.edu/papers/kbp2013_tsf.pdf},
+  url = {http://clulab.org/papers/kbp2013.pdf},
+  url_Slides_SF = {http://clulab.org/papers/kbp2013_sf.pdf},
+  url_Slides_TSF = {http://clulab.org/papers/kbp2013_tsf.pdf},
 }
 @inproceedings{SurdeanuHeng:14,
 	year = {2014}, 
 	author = {Surdeanu, Mihai and Heng, Ji},
 	booktitle = {Proceedings of the TAC-KBP 2014 Workshop}, 
 	title = {Overview of the English Slot Filling Track at the TAC2014 Knowledge Base Population Evaluation}, 
-  url = {http://clulab.cs.arizona.edu/papers/kbp2014_draft.pdf},
+  url = {http://clulab.org/papers/kbp2014_draft.pdf},
 }
 @inproceedings{Reschke:14,
 	year = {2014}, 
 	author = {Reschke, Kevin and Jankowiak, Martin and Surdeanu, Mihai and Manning, Christopher D. and Jurafsky, Dan},
 	booktitle = {Proceedings of the 9th edition of the Language Resources and Evaluation Conference (LREC)}, 
 	title = {Event Extraction Using Distant Supervision}, 
-  url = {http://clulab.cs.arizona.edu/papers/lrec2014_ds.pdf},
+  url = {http://clulab.org/papers/lrec2014_ds.pdf},
   url_Data = {http://nlp.stanford.edu/projects/dist-sup-event-extraction.shtml},
-  url_Slides = {http://clulab.cs.arizona.edu/papers/lrec2014_ds_slides.pdf}
+  url_Slides = {http://clulab.org/papers/lrec2014_ds_slides.pdf}
 }
 @inproceedings{Lee:14,
 	year = {2014}, 
 	author = {Lee, Heeyoung and MacCartney, Bill and Surdeanu, Mihai and Jurafsky, Dan},
 	booktitle = {Proceedings of the 9th edition of the Language Resources and Evaluation Conference (LREC)}, 
 	title = {On the Importance of Text Analysis for Stock Price Prediction}, 
-  url = {http://clulab.cs.arizona.edu/papers/lrec2014_stocks.pdf},
+  url = {http://clulab.org/papers/lrec2014_stocks.pdf},
   url_Data = {http://nlp.stanford.edu/pubs/stock-event.html},
-  url_Slides = {http://clulab.cs.arizona.edu/papers/lrec2014_stocks_slides.pdf},
+  url_Slides = {http://clulab.org/papers/lrec2014_stocks_slides.pdf},
 }
 @InProceedings{Bell:16,
   author    = {Bell, Dane and Gustave Hahn-Powell and Marco A. Valenzuela-Escarcega and Gustave Hahn-Powell  and Mihai Surdeanu},
   title     = {An Investigation of Coreference Phenomena in the Biomedical Domain},
   booktitle = {Proceedings of the 10th edition of the Language Resources and Evaluation Conference (LREC)},
   year      = {2016},
-  url       = {http://clulab.cs.arizona.edu/papers/lrec2016-coref.pdf},
+  url       = {http://clulab.org/papers/lrec2016-coref.pdf},
   url_Code  = {https://github.com/clulab/reach},
 }
 @InProceedings{Valenzuela:16,
@@ -501,7 +501,7 @@
   title     = {Towards Using Social Media to Identify Individuals at Risk for Preventable Chronic Illness},
   booktitle = {Proceedings of the 10th edition of the Language Resources and Evaluation Conference (LREC)},
   year      = {2016},
-  url       = {http://clulab.cs.arizona.edu/papers/lrec2016-t4f.pdf},
+  url       = {http://clulab.org/papers/lrec2016-t4f.pdf},
   url_Code  = {https://github.com/clulab/twitter4food},
 }
 @InProceedings{Surdeanu:15,
@@ -509,7 +509,7 @@
   title     = {Two Practical Rhetorical Structure Theory Parsers},
   booktitle = {Proceedings of the Conference of the North American Chapter of the Association for Computational Linguistics - Human Language Technologies (NAACL HLT): Software Demonstrations},
   year      = {2015},
-  url       = {http://clulab.cs.arizona.edu/papers/naacl2015-discourse.pdf},
+  url       = {http://clulab.org/papers/naacl2015-discourse.pdf},
   url_Code  = {https://github.com/sistanlp/processors},
 }
 @InProceedings{Intxaurrondo:15,
@@ -517,7 +517,7 @@
   title     = {Diamonds in the Rough: Event Extraction from Imperfect Microblog Data},
   booktitle = {Proceedings of the Conference of the North American Chapter of the Association for Computational Linguistics - Human Language Technologies (NAACL HLT)},
   year      = {2015},
-  url       = {http://clulab.cs.arizona.edu/papers/naacl2015-ee.pdf},
+  url       = {http://clulab.org/papers/naacl2015-ee.pdf},
   url_Data  = {http://ixa.eus/Ixa/Argitalpenak/Artikuluak/1425465524/publikoak/earthquake-kb-dataset.zip},
 }
 @InProceedings{Sharp:15,
@@ -525,7 +525,7 @@
   title     = {Spinning Straw into Gold: Using Free Text to Train Monolingual Alignment Models for Non-factoid Question Answering},
   booktitle = {Proceedings of the Conference of the North American Chapter of the Association for Computational Linguistics - Human Language Technologies (NAACL HLT)},
   year      = {2015},
-  url       = {http://clulab.cs.arizona.edu/papers/naacl2015-qa.pdf},
+  url       = {http://clulab.org/papers/naacl2015-qa.pdf},
   url_Data_and_Some_Code = {http://www.surdeanu.info/mihai/papers/straw2gold.zip},
 }
 @inproceedings{intxaurrondo13,
@@ -533,15 +533,15 @@
 	author = {Ander Intxaurrondo and Mihai Surdeanu and Oier Lopez de Lacalle and Eneko Agirre},
 	booktitle = {Proceedings of the 29th "Congreso de la Sociedad Espa{\~{n}}ola para el Procesamiento del Lenguaje Natural" (SEPLN 2013)}, 
 	title = {Removing Noisy Mentions for Distant Supervision}, 
-  url = {http://clulab.cs.arizona.edu/papers/sepln13.pdf},
+  url = {http://clulab.org/papers/sepln13.pdf},
 }
 @inproceedings{Tran:14,
 	year = {2014}, 
 	author = {Tran, Anh and Surdeanu, Mihai and Cohen, Paul},
 	booktitle = {Proceedings of the Third Joint Conference on Lexical and Computational Semantics (*SEM)}, 
 	title = {Extracting Latent Attributes from Video Scenes Using Text as Background Knowledge}, 
-  url = {http://clulab.cs.arizona.edu/papers/starsem2014.pdf},
-  url_Slides = {http://clulab.cs.arizona.edu/papers/starsem2014_slides.pdf},
+  url = {http://clulab.org/papers/starsem2014.pdf},
+  url_Slides = {http://clulab.org/papers/starsem2014_slides.pdf},
 }
 @article{Fried:2015,
         author = {Daniel Fried and Peter Jansen and Gustave Hahn-Powell and Mihai
@@ -580,7 +580,7 @@ over their first-order variants. },
 	author = {Angus Forbes and Mihai Surdeanu and Peter Jansen and Jane Carrington},
 	booktitle = {Proceedings of the 3rd IEEE Workshop on Interactive Visual Text Analytics}, 
 	title = {Transmitting Narrative: An Interactive Shift-Summarization Tool for Improving Nurse Communication}, 
-  url = {http://clulab.cs.arizona.edu/papers/textvis2013.pdf},
+  url = {http://clulab.org/papers/textvis2013.pdf},
 }
 @article{valenzuela2015description,
   title={Description of the odin event extraction framework and rule language},
@@ -728,7 +728,7 @@ keywords = {coreference, health applications},
   author={Enrique Noriega-Atala and Marco A. Valenzuela-Escarcega and Clayton T. Morrison and Mihai Surdeanu},
   booktitle={Proceedings of the Interactive Machine Learning and Semantic Information Retrieval Workshop at ICML, 2017},
   year={2017},
-  url={http://clulab.cs.arizona.edu/papers/focusedreading2017.pdf}
+  url={http://clulab.org/papers/focusedreading2017.pdf}
 }
 @inproceedings{biocreative6,
 title={{Large-scale automated reading with Reach discovers new cancer driving mechanisms}},
@@ -736,27 +736,27 @@ author={Valenzuela-Escarcega, Marco A. and Ozgun Babur and Gus Hahn-Powell and D
 pages={201-203},
 year={2017},
 booktitle={Proceedings of the Sixth BioCreative Challenge Evaluation Workshop},
-url={http://clulab.cs.arizona.edu/papers/biocreative6.pdf}
+url={http://clulab.org/papers/biocreative6.pdf}
 }
 @article{Rains:20182,
         author = {Stephen A. Rains and Melanie D. Hingle and Mihai Surdeanu and Dane Bell and Stephen Kobourov},
         title = {Effects of Message Framing on Diabetes Screening Attitudes and Behavior},
         journal = {Manuscript in preparation},
         year = {2018},
-        url = {http://clulab.cs.arizona.edu/papers/DiabetesMessageFramingStudyBriefReport.pdf}
+        url = {http://clulab.org/papers/DiabetesMessageFramingStudyBriefReport.pdf}
 }
 @inproceedings{lrec2018,
   title={Grounding Gradable Adjectives through Crowdsourcing},
   author={Sharp, Rebecca and Paul, Mithun and Nagesh, Ajay and Bell, Dane and Surdeanu, Mihai},
   booktitle={LREC 2018},
   year={2018},
-  url={http://clulab.cs.arizona.edu/papers/GroundingGradableAdjectivesthroughCrowdsourcing.pdf}
+  url={http://clulab.org/papers/GroundingGradableAdjectivesthroughCrowdsourcing.pdf}
 }
 @Article{Rains:2018,
   author    = {Stephen A. Rains and Melanie D. Hingle and Mihai Surdeanu and Dane Bell and Stephen Kobourov},
   title     = {A Test of The Risk Perception Attitude Framework as a Message Tailoring Strategy to Promote Diabetes Screening},
   journal = {Health Communication},
-  url = {http://clulab.cs.arizona.edu/papers/RainsHingleSurdeanuetalHC.pdf},
+  url = {http://clulab.org/papers/RainsHingleSurdeanuetalHC.pdf},
   url_odi = {https://doi.org/10.1080/10410236.2018.1431024},
   year = {2018}
 }
@@ -782,7 +782,7 @@ url={http://clulab.cs.arizona.edu/papers/biocreative6.pdf}
     title = {Controlling Information Aggregation for Complex Question Answering},
     booktitle = {Proceedings of the 40th European Conference on Information Retrieval (ECIR)},
     year = {2018},
-    url = {http://clulab.cs.arizona.edu/papers/ecir2018.pdf}
+    url = {http://clulab.org/papers/ecir2018.pdf}
 }
 @inproceedings{TAG-2018,
     author = {Angus G. Forbes and Kristine Lee and Gus Hahn-Powell and Marco A. Valenzuela-Escarcega and Mihai Surdeanu},
@@ -803,7 +803,7 @@ url={http://clulab.cs.arizona.edu/papers/biocreative6.pdf}
                of the Association for Computational Linguistics: Human Language Technologies,
                New Orleans, Louisiana, USA, Jun 1 - June 6, 2018},
   year      = {2018},
-  url = {http://clulab.cs.arizona.edu/papers/naaclhlt2018.pdf}
+  url = {http://clulab.org/papers/naaclhlt2018.pdf}
 }
 @inproceedings{whitespaces-identification2018,
   title={Scientific Discovery as Link Prediction in Influence and Citation Graphs},
@@ -815,8 +815,8 @@ url={http://clulab.cs.arizona.edu/papers/biocreative6.pdf}
   year={2018},
   abstract = {We introduce a machine learning approach for the identification of ``white spaces'' in scientific knowledge. Our approach addresses this task as link prediction over a graph that contains over 2M influence statements such as ``CTCF activates FOXA1'', which were automatically extracted using open-domain machine reading. We model this prediction task using graph-based features extracted from the above influence graph, as well as from a citation graph that captures scientific communities. We evaluated the proposed approach through backtesting. Although the data is heavily unbalanced (50 times more negative examples than positives), our approach predicts which influence links will be discovered in the ``near future'' with a F1 score of 27 points, and a mean average precision of 68\%. },
   organization={NAACL},
-  url_Slides={http://clulab.cs.arizona.edu/papers/TextGraphs.pdf},
-  url={http://clulab.cs.arizona.edu/papers/ScientificDiscoveryasLinkPredictioninInfluenceandCitationGraphs.pdf}
+  url_Slides={http://clulab.org/papers/TextGraphs.pdf},
+  url={http://clulab.org/papers/ScientificDiscoveryasLinkPredictioninInfluenceandCitationGraphs.pdf}
 }
 @inproceedings{vikasy_ARC_2018,
   title={Sanity Check: A Strong Alignment and Information Retrieval Baseline for AI2 Reasoning Challenge},
@@ -1100,14 +1100,14 @@ keywords = {information retrieval, recommender systems, machine learning},
   author    = {Bell, Dane and Laparra, Egoitz and Kousik, Aditya and Ishihara, Terron and Surdeanu, Mihai and Kobourov, Stephen}, 
   booktitle = {Ninth International Workshop on Health Text Mining and Information Analysis (LOUHI)}, 
   year      = {2018},
-  url = {http://clulab.cs.arizona.edu/papers/louhi2018-t2dmrisk.pdf},
-  url_Slides = {http://clulab.cs.arizona.edu/papers/louhi2018-emnlp.pptx} 
+  url = {http://clulab.org/papers/louhi2018-t2dmrisk.pdf},
+  url_Slides = {http://clulab.org/papers/louhi2018-emnlp.pptx} 
 }
 @Article{Zhou:2018,
   author    = {Jun Zhou and Dane Bell and Sabina Nusrat and Melanie D.\ Hingle and Mihai Surdeanu and Stephen Kobourov},
   title     = {Calorie estimation from pictures of food: Crowdsourcing study},
   journal = {Interactive Journal of Medical Research (IJMR)},
-  url = {http://clulab.cs.arizona.edu/papers/Zhou2018.pdf},
+  url = {http://clulab.org/papers/Zhou2018.pdf},
   doi = {10.2196/ijmr.9359},
   year = {2018}
 }
@@ -1127,7 +1127,7 @@ keywords = {information retrieval, recommender systems, machine learning},
 Cancer Driving Mechanisms},
   author  = {Valenzuela{-}Escarcega, Marco A. and Ozgun Babur and Gus Hahn-Powell and Dane Bell and Thomas Hicks and Enrique Noriega-Atala and Xia Wang and Mihai Surdeanu and Emek Demir and Clayton T. Morrison},
   journal = {Database: The Journal of Biological Databases and Curation},
-  url = {http://clulab.cs.arizona.edu/papers/escarcega2018.pdf},
+  url = {http://clulab.org/papers/escarcega2018.pdf},
   doi = {10.1093/database/bay098},
   year = {2018}
 }
@@ -1136,7 +1136,7 @@ Cancer Driving Mechanisms},
   author={Berger, Matthew and Nagesh, Ajay and Levine, Joshua A. and Surdeanu, Mihai and Zhang, Hao Helen},
   booktitle={Proceedings of the Conference on Empirical Methods in Natural Language Processing (EMNLP)},
   year={2018},
-  url={http://clulab.cs.arizona.edu/papers/emnlp2018.pdf}
+  url={http://clulab.org/papers/emnlp2018.pdf}
 }
 @InProceedings{Ebrahimi2018isi,
     author = {Mohammadreza Ebrahimi and Mihai Surdeanu and Sagar Samtani and Hsinchun Chen},
@@ -1144,7 +1144,7 @@ Cancer Driving Mechanisms},
     booktitle = {Proceedings of the IEEE Intelligence and Security Informatics Conference (ISI)},
     year = {2018},
     note = {This paper won the Best Paper Runner-up Award.},
-    url = {http://clulab.cs.arizona.edu/papers/isi2018.pdf}
+    url = {http://clulab.org/papers/isi2018.pdf}
 }
 @inproceedings{barbosa2019,
     title={Enabling Search and Collaborative Assembly of Causal Interactions Extracted from Multilingual and Multi-domain Free Text},
@@ -1152,7 +1152,7 @@ Cancer Driving Mechanisms},
     booktitle={Proceedings of the Conference of the North American Chapter of the Association for Computational Linguistics - Human Language Technologies (NAACL HLT): Software Demonstrations},
     year={2019},
     note={This paper received the Best System Demonstration award},
-    url={http://clulab.cs.arizona.edu/papers/NAACL2019_1.pdf}
+    url={http://clulab.org/papers/NAACL2019_1.pdf}
 }
 @INPROCEEDINGS {polarity2019,
     author    = "Enrique Noriega-Atala and Zhengzhong Liang and John A. Bachman and Clayton T. Morrison and Mihai Surdeanu",
@@ -1160,7 +1160,7 @@ Cancer Driving Mechanisms},
     booktitle = "Proceedings of the Workshop on Extracting Structured Knowledge from Scientific Publications",
     organization={NAACL-HLT},
     year      = "2019",
-    url = {http://clulab.cs.arizona.edu/papers/polarity19.pdf}
+    url = {http://clulab.org/papers/polarity19.pdf}
 }
 @inproceedings{fan2019MTre,
 title={Semi-Supervised Teacher-Student Architecture for Relation Extraction},
@@ -1171,7 +1171,7 @@ Mihai Surdeanu},
 booktitle = {Proceedings of the 3rd Workshop on Structured Prediction for Natural Language Processing},
 year={2019},
 organization={NAACL-HLT},
-url={http://clulab.cs.arizona.edu/papers/meanteacherre19.pdf}
+url={http://clulab.org/papers/meanteacherre19.pdf}
 }
 @INPROCEEDINGS {naaclhlt2019-emboot,
     author       = "Andrew Zupon and Maria Alexeeva and Marco A. Valenzuela-Escarcega and Ajay Nagesh and Mihai Surdeanu",
@@ -1179,7 +1179,7 @@ url={http://clulab.cs.arizona.edu/papers/meanteacherre19.pdf}
     booktitle    = "Proceedings of the 3rd Workshop on Structured Prediction for Natural Language Processing",
     year         = "2019",
     organization = "NAACL-HLT",
-    url = {http://clulab.cs.arizona.edu/papers/naaclhlt2019-emboot.pdf}
+    url = {http://clulab.org/papers/naaclhlt2019-emboot.pdf}
 }
 @phdthesis{ghpdiss2018,
         author = {Gus Hahn-Powell},
@@ -1290,16 +1290,16 @@ url={http://clulab.cs.arizona.edu/papers/meanteacherre19.pdf}
     year = "2019",
     address = "Hong Kong",
     publisher = "Association for Computational Linguistics",
-    url="http://clulab.cs.arizona.edu/papers/emnlp2019-rocc.pdf",
-    url_Poster = "http://clulab.cs.arizona.edu/papers/emnlp2019-rocc-poster.pdf"
+    url="http://clulab.org/papers/emnlp2019-rocc.pdf",
+    url_Poster = "http://clulab.org/papers/emnlp2019-rocc-poster.pdf"
 }
 @InProceedings{van2019language,
   title	    = {What does the language of foods say about us?}, 
   author    = {Van, Hoang and Musa, Ahmad and Chen, Hang and Surdeanu, Mihai and Kobourov, Stephen}, 
   booktitle = {Tenth International Workshop on Health Text Mining and Information Analysis (LOUHI)}, 
   year      = {2019},
-  url = {http://clulab.cs.arizona.edu/papers/louhi2019.pdf},
-  url_Slides = {http://clulab.cs.arizona.edu/papers/louhi2019.pptx} 
+  url = {http://clulab.org/papers/louhi2019.pdf},
+  url_Slides = {http://clulab.org/papers/louhi2019.pptx} 
 }
 @inproceedings{suntwal-etal-2019-importance,
     title = "On the Importance of Delexicalization for Fact Verification",
@@ -1321,7 +1321,7 @@ url={http://clulab.cs.arizona.edu/papers/meanteacherre19.pdf}
     title = {Parsing as Tagging},
     booktitle = {Proceedings of the 12th International Conference on Language Resources and Evaluation (LREC)},
     year = {2020},
-    url = {http://clulab.cs.arizona.edu/papers/pat.pdf}
+    url = {http://clulab.org/papers/pat.pdf}
 }
 @inproceedings{zheng-tang-2019-edin,
     title = "Exploring Interpretability in Event Extraction: Multitask Learning of a Neural Event Classifier and an Explanation Decoder",
@@ -1331,27 +1331,27 @@ url={http://clulab.cs.arizona.edu/papers/meanteacherre19.pdf}
     year = "2020",
     address = "Seattle, United States",
     publisher = "Association for Computational Linguistics",
-    url = "http://clulab.cs.arizona.edu/papers/aclsrw2020-edin.pdf"
+    url = "http://clulab.org/papers/aclsrw2020-edin.pdf"
 }
 @inproceedings{vacareanu2020mwe,
   title={An Unsupervised Method for Learning Representations of Multi-word Expressions for Semantic Classification},
   author={Robert Vacareanu and Marco A. Valenzuela-Escarcega and Rebecca Sharp and Mihai Surdeanu},
   booktitle={The 28th International Conference on Computational Linguistics in Barcelona (COLING 2020)},
-  url={http://clulab.cs.arizona.edu/papers/coling2020-mwe.pdf},
+  url={http://clulab.org/papers/coling2020-mwe.pdf},
   year={2020}
 }
 @inproceedings{mithun2020modeldis,
   title={Data and Model Distillation as a Solution for Domain-transferable Fact Verification},
   author={Mithun, Mitch and Suntwal, Sandeep and Surdeanu, Mihai},
   booktitle={Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
-  url={http://clulab.cs.arizona.edu/papers/knowledge_disillation.pdf},
+  url={http://clulab.org/papers/knowledge_disillation.pdf},
   year={2021}
 }
 @inproceedings{liang2021using,
   title={Using the Hammer Only on Nails: A Hybrid Method for Representation-based Evidence Retrieval for Question Answering},
   author={Liang, Zhengzhong and Zhao, Yiyun and Surdeanu, Mihai},
   booktitle={Proceedings of 43rd European Conference on IR Research, ECIR 2021},
-  url={http://clulab.cs.arizona.edu/papers/ecir2021-hybrid.pdf},
+  url={http://clulab.org/papers/ecir2021-hybrid.pdf},
   year={2021}
 }
 @inproceedings{zheng-tang-2021-edin,
@@ -1359,7 +1359,7 @@ url={http://clulab.cs.arizona.edu/papers/meanteacherre19.pdf}
     author = "Tang, Zheng and Surdeanu, Mihai",
     booktitle = "Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies: TrustNLP Workshop",
     year = "2021",
-    url = "http://clulab.cs.arizona.edu/papers/trustNLP2021_edin.pdf"
+    url = "http://clulab.org/papers/trustNLP2021_edin.pdf"
 }
 @inproceedings{culnan-etal-2021-ire,
     title = "Me, myself, and ire: Effects of automatic transcription quality on emotion, sarcasm, and personality detection",
@@ -1429,15 +1429,15 @@ url={http://clulab.cs.arizona.edu/papers/meanteacherre19.pdf}
   author={Bastan, Mohaddeseh and Shankar, Nishant and Surdeanu, Mihai and Balasubramanian, Niranjan},
   booktitle={Proceedings of the 2022 LREC Conference},
   year={2022},
-  url={http://clulab.cs.arizona.edu/papers/SuMe_LREC2022.pdf}
+  url={http://clulab.org/papers/SuMe_LREC2022.pdf}
 }
 @inproceedings{rahimi2022bird,
   title={Do Transformer Networks Improve the Discovery of Rules from Text?},
   author={Rahimi, Mahdi and Surdeanu, Mihai},
   booktitle={Proceedings of the 13th Language Resources and Evaluation Conference (LREC)},
   year={2022},
-  url={http://clulab.cs.arizona.edu/papers/bird.pdf},
-  url_Poster={http://clulab.cs.arizona.edu/papers/can_poster.pdf}
+  url={http://clulab.org/papers/bird.pdf},
+  url_Poster={http://clulab.org/papers/can_poster.pdf}
 }
 @inproceedings{bridgephrases-identification2022,
   title={A STEP towards Interpretable Multi-Hop Reasoning: Bridge Phrase Identification and Query Expansion},
@@ -1454,7 +1454,7 @@ lexical overlap or semantic relation with the question. Through an evaluation on
 for multi-hop QA, we show that our method yields: (a) improved evidence retrieval, (b) improved QA performance when using
 the retrieved sentences; and (c) effective and faithful explanations when answers are provided.},
   organization={European Language Resource Association (ELRA)},
-  url={http://clulab.cs.arizona.edu/papers/bridgephrases.pdf}
+  url={http://clulab.org/papers/bridgephrases.pdf}
 }
 
 @inproceedings{hungerford2022,
@@ -1462,7 +1462,7 @@ the retrieved sentences; and (c) effective and faithful explanations when answer
   author={John Hungerford and Yee Seng Chan and Jessica MacBride and Benjamin M. Gyori and Andrew Zupon and Zheng Tang and Egoitz Laparra and Haoling Qiu and Bonan Min and Yan Zverev and Caitlin Hilverman and Max Thomas and Walt Andrews and Keith Alcock and Zeyu Zhang and Michael Reynolds and Mihai Surdeanu and Steve Bethard and Rebecca Sharp},
   booktitle = {Proceedings of the Second Workshop on Bridging Human-Computer Interaction and Natural Language Processing},
   year={2022},
-  url={http://clulab.cs.arizona.edu/papers/hcinlp2022-oiad.pdf}
+  url={http://clulab.org/papers/hcinlp2022-oiad.pdf}
 }
 
 @inproceedings{alexeeva-etal-2022-combining,
@@ -1484,7 +1484,7 @@ the retrieved sentences; and (c) effective and faithful explanations when answer
 	author={Zupon, Andrew and Carnie, Andrew and Hammond, Michael and Surdeanu, Mihai},
 	booktitle={Proceedings of the 13th Language Resources and Evaluation Conference (LREC)},
 	year={2022},
-	url={http://clulab.cs.arizona.edu/papers/lrec-parsing.pdf}
+	url={http://clulab.org/papers/lrec-parsing.pdf}
 }
 
 @inproceedings{https://doi.org/10.48550/arxiv.2205.15281,
@@ -1529,6 +1529,6 @@ the retrieved sentences; and (c) effective and faithful explanations when answer
     author = "Kwak, Alice S. and Israelsen, Jacob O. and Morrison, Clayton T. and Bambauer, Derek E. and Surdeanu, Mihai",
     booktitle = "Findings of the Association for Computational Linguistics: EMNLP 2022",
     year = "2022",
-    url = "http://clulab.cs.arizona.edu/papers/kwak2022.pdf",
+    url = "http://clulab.org/papers/kwak2022.pdf",
 }
 
