--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -526,7 +526,7 @@
   booktitle = {Proceedings of the Conference of the North American Chapter of the Association for Computational Linguistics - Human Language Technologies (NAACL HLT)},
   year      = {2015},
   url       = {http://clulab.org/papers/naacl2015-qa.pdf},
-  url_Data_and_Some_Code = {http://www.surdeanu.info/mihai/papers/straw2gold.zip},
+  url_Data_and_Some_Code = {http://surdeanu.cs.arizona.edu/mihai/papers/straw2gold.zip},
 }
 @inproceedings{intxaurrondo13,
 	year = {2013}, 
