Adds recent publications for Steve

--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1531,4 +1531,211 @@ the retrieved sentences; and (c) effective and faithful explanations when answer
     year = "2022",
     url = "http://clulab.org/papers/kwak2022.pdf",
 }
+@article{EMERSON2022106879,
+title = {Toward NEPA performance: A framework for assessing EIAs},
+journal = {Environmental Impact Assessment Review},
+volume = {97},
+pages = {106879},
+year = {2022},
+issn = {0195-9255},
+doi = {https://doi.org/10.1016/j.eiar.2022.106879},
+url = {https://www.sciencedirect.com/science/article/pii/S0195925522001457},
+author = {Kirk Emerson and Elizabeth Baldwin and Tyler A. Scott and Justin R. Pidot and Aaron M. Lien and Faiz Currim and Steven Bethard and Sudha Ram and Marc L. Miller and Laura López-Hoffman},
+keywords = {environmental policy},
+}
+@proceedings{clinicalnlp-2022-clinical,
+    title = "Proceedings of the 4th Clinical Natural Language Processing Workshop",
+    editor = "Naumann, Tristan  and
+      Bethard, Steven  and
+      Roberts, Kirk  and
+      Rumshisky, Anna",
+    month = jul,
+    year = "2022",
+    address = "Seattle, WA",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2022.clinicalnlp-1.0",
+    keywords = {health applications},
+}
+@inproceedings{wang-etal-2022-ensemble,
+    title = "Ensemble-based Fine-Tuning Strategy for Temporal Relation Extraction from the Clinical Narrative",
+    author = "Wang, Lijing  and
+      Miller, Timothy  and
+      Bethard, Steven  and
+      Savova, Guergana",
+    booktitle = "Proceedings of the 4th Clinical Natural Language Processing Workshop",
+    month = jul,
+    year = "2022",
+    address = "Seattle, WA",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2022.clinicalnlp-1.11",
+    doi = "10.18653/v1/2022.clinicalnlp-1.11",
+    pages = "103--108",
+    keywords = {workshop paper, timelines, information extraction, health applications},
+}
+@inproceedings{dligach-etal-2022-exploring,
+    title = "Exploring Text Representations for Generative Temporal Relation Extraction",
+    author = "Dligach, Dmitriy  and
+      Bethard, Steven  and
+      Miller, Timothy  and
+      Savova, Guergana",
+    booktitle = "Proceedings of the 4th Clinical Natural Language Processing Workshop",
+    month = jul,
+    year = "2022",
+    address = "Seattle, WA",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2022.clinicalnlp-1.12",
+    doi = "10.18653/v1/2022.clinicalnlp-1.12",
+    pages = "109--113",
+    keywords = {workshop paper, timelines, information extraction, health applications},
+}
+@inproceedings{culnan-etal-2022-exploring,
+    title = "Exploring transformers and time lag features for predicting changes in mood over time",
+    author = "Culnan, John  and
+      Romero Diaz, Damian  and
+      Bethard, Steven",
+    booktitle = "Proceedings of the Eighth Workshop on Computational Linguistics and Clinical Psychology",
+    month = jul,
+    year = "2022",
+    address = "Seattle, USA",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2022.clpsych-1.21",
+    doi = "10.18653/v1/2022.clpsych-1.21",
+    pages = "226--231",
+    keywords = {shared task paper, social media, health applications},
+}
+@inproceedings{tasnim-etal-2022-team,
+    title = "{TEAM}-Atreides at {S}em{E}val-2022 Task 11: On leveraging data augmentation and ensemble to recognize complex Named Entities in {B}angla",
+    author = "Tasnim, Nazia  and
+      Shihab, Md. Istiak  and
+      Shahriyar Sushmit, Asif  and
+      Bethard, Steven  and
+      Sadeque, Farig",
+    booktitle = "Proceedings of the 16th International Workshop on Semantic Evaluation (SemEval-2022)",
+    month = jul,
+    year = "2022",
+    address = "Seattle, United States",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2022.semeval-1.209",
+    doi = "10.18653/v1/2022.semeval-1.209",
+    pages = "1524--1530",
+    keywords = {shared task paper, information extraction},
+}
+@inproceedings{song-bethard-2022-ua,
+    title = "{UA}-{KO} at {S}em{E}val-2022 Task 11: Data Augmentation and Ensembles for {K}orean Named Entity Recognition",
+    author = "Song, Hyunju  and
+      Bethard, Steven",
+    booktitle = "Proceedings of the 16th International Workshop on Semantic Evaluation (SemEval-2022)",
+    month = jul,
+    year = "2022",
+    address = "Seattle, United States",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2022.semeval-1.222",
+    doi = "10.18653/v1/2022.semeval-1.222",
+    pages = "1608--1612",
+    keywords = {shared task paper, information extraction},
+}
+@inproceedings{su-etal-2022-comparison,
+    title = "A Comparison of Strategies for Source-Free Domain Adaptation",
+    author = "Su, Xin  and
+      Zhao, Yiyun  and
+      Bethard, Steven",
+    booktitle = "Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)",
+    month = may,
+    year = "2022",
+    address = "Dublin, Ireland",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2022.acl-long.572",
+    pages = "8352--8367",
+    keywords = {domain adaptation},
+    note = {[Acceptance rate 21\%]},
+}
+@inproceedings{bertsch-bethard-2021-detection,
+    title = "Detection of Puffery on the {E}nglish {W}ikipedia",
+    author = "Bertsch, Amanda  and
+      Bethard, Steven",
+    booktitle = "Proceedings of the Seventh Workshop on Noisy User-generated Text (W-NUT 2021)",
+    month = nov,
+    year = "2021",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2021.wnut-1.36",
+    pages = "329--333",
+    keywords = {social media, workshop paper},
+}
+@inproceedings{su-bethard-2021-simplifying,
+    title = "Simplifying annotation of intersections in time normalization annotation: exploring syntactic and semantic validation",
+    author = "Su, Peiwen  and
+      Bethard, Steven",
+    booktitle = "Proceedings of The Joint 15th Linguistic Annotation Workshop (LAW) and 3rd Designing Meaning Representations (DMR) Workshop",
+    month = nov,
+    year = "2021",
+    address = "Punta Cana, Dominican Republic",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2021.law-1.11",
+    pages = "106--111",
+    keywords = {timelines, annotation, workshop paper},
+}
+@inproceedings{zhao-etal-2021-pretrained,
+    title = "Do pretrained transformers infer telicity like humans?",
+    author = "Zhao, Yiyun  and
+      Ngui, Jian Gang  and
+      Hall Hartley, Lucy  and
+      Bethard, Steven",
+    booktitle = "Proceedings of the 25th Conference on Computational Natural Language Learning",
+    month = nov,
+    year = "2021",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2021.conll-1.6",
+    pages = "72--81",
+    keywords = {timelines, machine learning},
+    note = {[Acceptance rate 23\%]},
+}
+@article{rains-etal-2021-hcr,
+    author = {Rains, Stephen A and Shmargad, Yotam and Coe, Kevin and Kenski, Kate and Bethard, Steven},
+    title = {Assessing the Russian Troll Efforts to Sow Discord on Twitter during the 2016 U.S. Election},
+    journal = {Human Communication Research},
+    volume = {47},
+    number = {4},
+    pages = {477-486},
+    year = {2021},
+    month = {08},
+    issn = {0360-3989},
+    doi = {10.1093/hcr/hqab009},
+    url = {https://doi.org/10.1093/hcr/hqab009},
+    keywords = {social media},
+}
+@inproceedings{laparra-etal-2021-semeval,
+    title = "{S}em{E}val-2021 Task 10: Source-Free Domain Adaptation for Semantic Processing",
+    author = {Laparra, Egoitz  and
+      Su, Xin  and
+      Zhao, Yiyun  and
+      Uzuner, {\"O}zlem  and
+      Miller, Timothy  and
+      Bethard, Steven},
+    booktitle = "Proceedings of the 15th International Workshop on Semantic Evaluation (SemEval-2021)",
+    month = aug,
+    year = "2021",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2021.semeval-1.42",
+    doi = "10.18653/v1/2021.semeval-1.42",
+    pages = "348--356",
+    keywords = {domain adaptation, negation, timelines, information extraction, health applications, shared task paper},
+}
+@inproceedings{su-etal-2021-university,
+    title = "The {U}niversity of {A}rizona at {S}em{E}val-2021 Task 10: Applying Self-training, Active Learning and Data Augmentation to Source-free Domain Adaptation",
+    author = "Su, Xin  and
+      Zhao, Yiyun  and
+      Bethard, Steven",
+    booktitle = "Proceedings of the 15th International Workshop on Semantic Evaluation (SemEval-2021)",
+    month = aug,
+    year = "2021",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2021.semeval-1.56",
+    doi = "10.18653/v1/2021.semeval-1.56",
+    pages = "458--466",
+    keywords = {domain adaptation, negation, timelines, information extraction, health applications, shared task paper},
+}
 
