--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1422,6 +1422,8 @@ url={http://clulab.org/papers/meanteacherre19.pdf}
     issn = {0891-2017},
     doi = {10.1162/coli_a_00463},
     url = {https://doi.org/10.1162/coli\_a\_00463},
+    url_Slides = {https://clulab.org/papers/twoflints-slides.pptx},
+    url_Videos = {vhttps://clulab.org/papers/twoflints-ideo.mp4}
     eprint = {https://direct.mit.edu/coli/article-pdf/doi/10.1162/coli\_a\_00463/2046371/coli\_a\_00463.pdf},
 }
 @inproceedings{mithun2021students,
